# Midas

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml  typecheck.yml
api/allocator/: index.html
api/backtest/: index.html
api/config/: index.html
api/live/: index.html
api/models/: index.html
api/optimizer/: index.html
api/rebalancer/: index.html
api/strategies/: index.html
cli/: index.html
docs/: architecture.md  cli.md  index.md  strategies.md
docs/api/: allocator.md  backtest.md  config.md  live.md  models.md  optimizer.md  rebalancer.md  strategies.md
docs/plans/: 2026-04-28-risk-engine.md
docs/specs/: 2026-04-27-risk-engine-design.md
example-strategies/: README.md  balanced-growth.yaml  dip-buying.yaml  long-trend.yaml  trend-following.yaml  turtle-breakout.yaml  volatility-momentum.yaml
search/: search_index.json
src/midas/: __main__.py  agent.py  allocator.py  backtest.py  charts.py  cli.py  config.py  live.py  metrics.py  models.py  optimizer.py  order_sizer.py  output.py  rebalancer.py  restrictions.py  results.py  (+3 more)
tests/: conftest.py  test_agent.py  test_allocator.py  test_allocator_risk.py  test_backtest.py  test_charts.py  test_config.py  test_integration.py  test_lookahead_regression.py  test_models.py  test_optimizer.py  test_optimizer_risk_propagation.py  test_order_sizer.py  test_rebalancer.py  test_restrictions.py  test_risk.py  test_risk_metrics.py  test_risk_telemetry_e2e.py  test_sizing.py  test_strategies.py
(+28 files in other folders)
